<resources>
    <string name="app_name">아싸도우미</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="review_write">작성하기</string>
    <string name="info">정보</string>
    <string name="review">후기</string>
    <string name="map">지도</string>
    <string name="ok">저장</string>
    <string name="cancel">취소</string>
    <string name="home">홈</string>
    <string name="eating">밥집</string>
    <string name="cafe">카페</string>
    <string name="conv_store">편의점</string>
    <string name="entertain">유흥</string>
    <string name="music">노래</string>
    <string name="book">책/웹툰</string>
    <string name="video">영상</string>
    <string name="game">게임</string>
    <string name="board">게시판</string>
    <string name="chatting">채팅</string>

    <string name="kakao_sdk_key">ad46142faf3a1336c52f0ca25211ccae</string>
    <string name="kakao_rest_key">b6e21fc6d7d85314f799340f3b264013</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 공통 -->
    <string name="network_not_working">서버와의 통신이 원활하지 않습니다.</string>
    <!-- 회원가입 -->
    <string name="input_id_message">아이디를 입력하세요.</string>
    <string name="input_pw_message">비밀번호를 입력하세요.</string>
    <string name="input_pw_check_message">비밀번호 확인을 입력하세요.</string>
    <string name="input_name_message">이름을 입력하세요.</string>
    <string name="input_nickname_message">닉네임을 입력하세요.</string>
    <string name="input_age_message">나이를 입력하세요.</string>
    <string name="input_university_message">대학교를 입력하세요.</string>
    <string name="input_pw_noMatch_message">비밀번호가 일치하지 않습니다.</string>
    <string name="sign_up_success">회원가입 되었습니다.</string>
    <string name="sign_up_failure">회원가입을 다시 진행해주세요.</string>
    <string name="sign_up_check_id">아이디 중복검사를 해야합니다.</string>
    <string name="sign_up_check_id_again">아이디 중복검사를 다시 해주세요.</string>
    <string name="sign_up_check_id_ok">사용 가능한 아이디입니다.</string>
    <string name="sign_up_check_id_no">이미 존재하는 아이디입니다.</string>
    <!-- 로그인 -->
    <string name="login_pw_no_match">비밀번호가 일치하지 않습니다.</string>
    <string name="login_id_no_match">존재하지 않는 아이디입니다.</string>
    <string name="login_auto_fail_message">다시 로그인해주세요.</string>
    <!-- 게시판 글쓰기 -->
    <string name="board_write_input_title">제목을 입력해주세요.</string>
    <string name="board_write_input_content">내용을 입력해주세요.</string>
    <!-- 댓글 -->
    <string name="board_detail_input_comment">내용을 입력해주세요.</string>
    <string name="board_detail_comment_success">댓글이 등록되었습니다.</string>
    <!-- 상권 -->
    <string name="store_input_search_keyword">키워드를 입력하세요.</string>
    <string name="store_location_request_deny">지도를 이용할 수 없습니다.</string>
    <string name="store_blog_no_search">해당 음식점에 대한 블로그를 찾을 수 없습니다.</string>
</resources>
