<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_sub_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_sub_title_height">

        <LinearLayout
            android:id="@+id/sub_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sub_toolbar_background"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/sub_toolbar_bottom_line"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/btn_text_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_review"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review"
                    android:textColor="@color/btn_text_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_map"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textColor="@color/btn_text_color" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/img_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/background_photo">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_img_review"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:listitem="@layout/row_img"/>
<!--                <ImageView-->
<!--                    android:id="@+id/img_review"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:src="@drawable/f_add_image_b_g" />-->

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_store_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="아비꼬"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/rating_star"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="5"
                        android:stepSize="0.5" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_store_rating"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:text="3.2"
                        android:textColor="@color/oshPrimaryLight"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="25dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_store_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/f_map_icon"
                        android:drawablePadding="6dp"
                        android:text="서울특별시 하몬구 소프트동 123-4" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:background="@color/background_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="문의전화" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_store_phone"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="00-0000-0000" />

                </LinearLayout>

                <View
                    android:layout_width="2.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/background_photo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_store_open_time"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="OPEN  09:00" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_store_close_time"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="CLOSE  22:00" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:background="@color/background_photo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_store_add_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="25dp"
                android:text="추가정보" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>